--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 	<head>
 		<meta charset="utf-8">
-		<title>"Jennifer's Scales Assignmen"</title>
+		<title>Jennifer's Scales Assignment</title>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="styles.css">
 		<script src="processing.js"></script>
@@ -9,14 +9,14 @@
 	</head>
 	<body>
 		<header>
-			<h1>"Dragon Scales"</h1>
+			<h1>Dragon Scales</h1>
 		</header>
 			<section id="content">
 				<canvas id="Scales" data-processing-sources="Scales.pde">
 				</canvas>
 		    </section>
 	    <footer>
-		    "Jennifer Chang AP CSA"
+		    Jennifer Chang AP CSA
 	    </footer>
 	</body>
 </html>
